# WordWriter

./: .gitignore  LICENSE  MANIFEST.in  README_CN.md  WordWriter.py  WordWriter3.py  pyproject.toml  readme.md  release.ps1  release.sh  setup.py
.github/workflows/: create-release.yml  publish-to-pypi.yml  test.yml
OldRelease/: WordWriter_v1.0.py  WordWriter_v1.6.py  WordWriter_v2.14.py
WordWriter/: WordWriter.py  __init__.py  constants.py  core.py
test/: Demo.py  test.docx  testTable.txt
